--- a/listener/listener.Console/listener.Console.csproj
+++ b/listener/listener.Console/listener.Console.csproj
@@ -42,8 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ByteArrayExtensions.cs" />
+    <Compile Include="SerialPortPacketReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableHostPacketReader.cs" />
+    <Compile Include="TablePacket.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
