--- a/listener/listener.Common/listener.Common.csproj
+++ b/listener/listener.Common/listener.Common.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,7 +44,7 @@
     <Compile Include="Infrastructure\TableHostPacketReader.cs" />
     <Compile Include="Infrastructure\TablePacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\ByteArrayExtensions.cs" />
+    <Compile Include="TableStatusResolver.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
