--- a/listener/listener.Bg/App.config
+++ b/listener/listener.Bg/App.config
@@ -5,5 +5,6 @@
     </startup>
   <appSettings>
     <add key="port" value="COM3"/>
+    <add key="endpoint" value="ws://nb-yma:81"/>
   </appSettings>
 </configuration>
