--- a/listener/listener.Web/Web.config
+++ b/listener/listener.Web/Web.config
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AutomaticAppStartup" value="true" />
     <add key="owin:AppStartup" value="listener.Web.OwinStartup, listener.Web" />
-    <add key="endpoint" value="ws://nb-yma:81" />
+    <add key="endpoint" value="ws://ua-wall:81" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
